--- a/web2-week5-responsive-master/scss/base/_base.scss
+++ b/web2-week5-responsive-master/scss/base/_base.scss
@@ -1,6 +1,10 @@
 /* =============
     Base
 ============= */
+body{
+    background-color: red;
+}
+
 h1,h2,h3,h4,h5,p,ul,figure{
     margin: 0;
     padding: 0;
