--- a/web2-week5-responsive-master/css/styles.css
+++ b/web2-week5-responsive-master/css/styles.css
@@ -311,6 +311,9 @@ template {
 /* =============
     Base
 ============= */
+body {
+  background-color: red; }
+
 h1, h2, h3, h4, h5, p, ul, figure {
   margin: 0;
   padding: 0; }
