--- a/web2-week5-responsive-master/css/styles.css
+++ b/web2-week5-responsive-master/css/styles.css
@@ -378,6 +378,34 @@ textarea {
 /* =============
     Navigation
 ============= */
+header section:nth-child(2) a:link, header section:nth-child(2) a:visited {
+  background-color: #F8C832;
+  height: 30px;
+  width: 30px;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000; }
+
+header section:nth-child(2) a:hover, header section:nth-child(2) a:active {
+  color: #fff;
+  background-color: #000; }
+
+header nav {
+  display: none; }
+  header nav ul li {
+    border-bottom: 1px solid #F8C832; }
+    header nav ul li a:link,
+    header nav ul li a:visited {
+      font-family: 'Roboto Slab', serif;
+      color: #fff;
+      font-size: 1.25rem;
+      padding: 20px 20px;
+      display: inline-block; }
+  header nav ul li:last-child {
+    border: none; }
+
 /* =============
     Header
 ============= */
