--- a/web2-week5-responsive-master/css/styles.css
+++ b/web2-week5-responsive-master/css/styles.css
@@ -387,24 +387,47 @@ header section:nth-child(2) a:link, header section:nth-child(2) a:visited {
   align-items: center;
   justify-content: center;
   color: #000; }
+  @media (min-width: 980px) {
+    header section:nth-child(2) a:link, header section:nth-child(2) a:visited {
+      width: inherit;
+      height: inherit;
+      padding: 10px 20px;
+      border-radius: 20px; }
+      header section:nth-child(2) a:link i, header section:nth-child(2) a:visited i {
+        margin-right: 10px; } }
 
 header section:nth-child(2) a:hover, header section:nth-child(2) a:active {
   color: #fff;
   background-color: #000; }
 
-header nav {
-  display: none; }
-  header nav ul li {
-    border-bottom: 1px solid #F8C832; }
-    header nav ul li a:link,
-    header nav ul li a:visited {
-      font-family: 'Roboto Slab', serif;
-      color: #fff;
-      font-size: 1.25rem;
-      padding: 20px 20px;
-      display: inline-block; }
-  header nav ul li:last-child {
-    border: none; }
+@media (min-width: 980px) {
+  header nav ul {
+    display: flex; } }
+
+header nav ul li {
+  border-bottom: 1px solid #F8C832; }
+  @media (min-width: 980px) {
+    header nav ul li {
+      border-bottom: none;
+      border-right: 1px solid #000;
+      padding: 0 50px; } }
+  header nav ul li a:link,
+  header nav ul li a:visited {
+    font-family: 'Roboto Slab', serif;
+    color: #fff;
+    font-size: 1.25rem;
+    padding: 20px 20px;
+    display: inline-block; }
+    @media (min-width: 980px) {
+      header nav ul li a:link,
+      header nav ul li a:visited {
+        color: #000; } }
+  header nav ul li a:active,
+  header nav ul li a:hover {
+    color: #F8C832; }
+
+header nav ul li:last-child {
+  border: none; }
 
 /* =============
     Header
@@ -412,10 +435,20 @@ header nav {
 header {
   display: grid;
   grid-template-columns: 20% auto;
-  grid-template-areas: "burger survival" "nav nav"; }
+  grid-template-areas: "burger survival" "nav nav";
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100%; }
+  @media (min-width: 980px) {
+    header {
+      grid-template-areas: "nav survival"; } }
   header section:nth-child(1) {
     padding: 10px;
     grid-area: burger; }
+    @media (min-width: 980px) {
+      header section:nth-child(1) {
+        display: none; } }
     header section:nth-child(1) button {
       background-color: #fff;
       border: none;
@@ -428,10 +461,18 @@ header {
     align-items: center; }
     header section:nth-child(2) a span {
       display: none; }
+      @media (min-width: 980px) {
+        header section:nth-child(2) a span {
+          display: inline-block; } }
   header nav {
+    display: none !important;
     padding: 10px;
     grid-area: nav;
     background-color: #222222; }
+    @media (min-width: 980px) {
+      header nav {
+        display: block !important;
+        background-color: #fff; } }
 
 /* =============
     Footer
@@ -469,7 +510,8 @@ footer {
   height: 358px;
   background-image: url("../img/hero/hero.jpg");
   background-size: cover;
-  background-position: -100px 0; }
+  background-position: -100px 0;
+  margin-top: 50px; }
   @media (min-width: 585px) {
     #hero {
       height: 400px; } }
@@ -500,7 +542,8 @@ footer {
       height: 525px; } }
   @media (min-width: 980px) {
     #hero-2 {
-      height: 600px; } }
+      height: 600px;
+      margin-top: 83px; } }
   @media (min-width: 1375px) {
     #hero-2 {
       height: 100vh; } }
