--- a/web2-week5-responsive-master/scss/sections/_heroes.scss
+++ b/web2-week5-responsive-master/scss/sections/_heroes.scss
@@ -7,7 +7,7 @@
     background-image: url('../img/hero/hero.jpg');
     background-size: cover;
     background-position: -100px 0;
-
+    margin-top: 50px;
     @include sm{
         height: 400px;
     }
@@ -46,6 +46,7 @@
 
     @include lg{
         height: 600px;
+        margin-top: 83px;
     }
 
     @include xl{
