--- a/web2-week5-responsive-master/scss/components/_navigation.scss
+++ b/web2-week5-responsive-master/scss/components/_navigation.scss
@@ -1,3 +1,92 @@
 /* =============
     Navigation
 ============= */
+a:hover,
+a:link {
+    text-decoration: none;
+    transition: 0.25s;
+}
+
+
+#off-canvas-container{
+    /* -------------
+        Here are the properties you can changes for the off-canvas navigation-slide
+    ------------- */
+
+    // background-color: $black;
+    // grid-template-columns: 10px auto 10px;
+    // padding-top: 20px;
+
+    // width of the off canvas navigation
+    // width: 200px;
+
+    /* close btn */
+    button {
+        background-color: transparent;
+        border: none;
+        color: $white;
+        cursor: pointer;
+        font-size: rem-calc(25);
+        margin-bottom: 20px;
+        //text-align: right;
+
+        transition: 0.25s;
+        //width: 100%;
+        display: flex;
+        margin-left: auto;
+        }
+
+
+    /* close btn */
+    button:hover {
+        color: $sunflower;
+    }
+
+    ul {
+        li {
+
+            border-bottom: 1px solid $sunflower;
+            text-align: right;
+
+            //margin-bottom: 20px;
+            a:link,
+            a:visited {
+                color: #fff;
+                padding: 20px 1%;
+                width: 99%;
+                display: inline-block;
+                //DISPLAY INLINE BLOCK
+            }
+
+            a:active,
+            a:hover {
+                color: $black;
+                background-color: $sunflower;
+
+            }
+        }
+
+        li:last-child{
+            border:none;
+        }
+    }
+}
+
+
+#burger-icon {
+    background-color: $white;
+    border: none;
+    font-size: rem-calc(25);
+    outline: none;
+    transition: 0.25s;
+    //padding: 8px;
+    // position: fixed;
+    // right: 20px;
+    // top: 20px;
+    // z-index: 100;
+}
+
+#burger-icon:hover {
+
+    color: $sunflower;
+}
